# ct-aes

./: Cargo.toml  README.md  build.rs
benches/: aes.rs
gf256/: Cargo.toml
gf256/src/: inv.rs  lib.rs  symbolic.rs
src/: lib.rs  util.rs  word.rs
src/aes/: block.rs  key.rs  mod.rs  ops.rs  simple.rs
src/bitslice/: bitslice.rs  gf256.rs  key.rs  mod.rs  primitive.rs  sbox.rs
src/hardware/: interleave.rs  x86.rs
src/hardware/x86/: intrinsics.rs
tests/: openssl.rs
